Fix full menu overflow

--- a/source/style/common/main.scss
+++ b/source/style/common/main.scss
@@ -11,6 +11,11 @@ html, body {
   }
 }
 
+
+.body-overflow {
+  overflow: hidden;
+}
+
 .menu-full {
   display: none;
 }
